[FIX] UnsupportedOperationException 해결
`removeLast()` 대신 인덱싱을 활용해 제거하도록 변경